feat: 依照接口增加部分字段，进行部分命名变动
